--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<title>Genesis – AK</title>
+<title>Mortal Kombat 2</title>
 
 <script>
   // CONFIGURAÇÃO MEGA DRIVE / GENESIS
@@ -10,7 +10,7 @@
   EJS_threads = false;
   EJS_player        = "#game";
   EJS_core          = "genesis_plus_gx";   // Core correto Mega Drive
-  EJS_gameUrl       = "roms/sor.bin";      // ROM do repositório gen-sor
+  EJS_gameUrl       = "roms/mk2.bin";      // ROM do repositório gen-sor
   EJS_pathtodata    = "data/";             // Caminho do EmulatorJS
 
   // Inicialização automática
