--- a/index.html
+++ b/index.html
@@ -1,22 +1,29 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<title>Mortal Kombat 2</title>
+<meta charset="UTF-8">
+<meta name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+
+<title>Mortal Kombat II – Mega Drive</title>
 
 <script>
-  EJS_DEBUG_XX = true;
-  EJS_threads = false;
+  /* ==============================
+     CONFIGURAÇÃO EMULATORJS
+     ============================== */
 
-  EJS_player = "#game";
-  EJS_core = "genesis_plus_gx";
-  EJS_gameUrl = "roms/mk2.bin";
+  EJS_DEBUG_XX = true;
+  EJS_threads = false;              // obrigatório no GitHub Pages
+
+  EJS_player     = "#game";
+  EJS_core       = "genesis_plus_gx";
+  EJS_gameUrl    = "roms/mk2.bin";
   EJS_pathtodata = "data/";
 
   EJS_startOnLoaded = true;
   EJS_fullscreenOnLoaded = false;
 
-  /* 🔥 FORÇA CONTROLE DE 6 BOTÕES */
+  /* 🎮 FORÇA CONTROLE MEGA DRIVE 6 BOTÕES */
   EJS_coreOptions = {
     genesis_plus_gx: {
       input_device_p1: "6button"
@@ -27,61 +34,79 @@
 <script src="data/loader.js"></script>
 
 <style>
-  html, body {
-    margin: 0;
-    background: black;
-    height: 100%;
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-  }
+html, body {
+  margin: 0;
+  background: black;
+  height: 100%;
+  overflow: hidden;
+  font-family: Arial, sans-serif;
+}
 
-  #game {
-    width: 100vw;
-    height: 100vh;
-  }
+#game {
+  width: 100vw;
+  height: 100vh;
+}
 
-  /* Mini‑box lisa, sem textura */
-  #overlay {
-    position: fixed;
-    inset: 0;
-    background: rgba(0,0,0,0.85);
-    color: white;
-    font-size: 26px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    z-index: 10;
-    cursor: pointer;
-    border-radius: 12px;
-  }
+/* Overlay inicial */
+#overlay {
+  position: fixed;
+  inset: 0;
+  background: rgba(0,0,0,0.9);
+  color: white;
+  font-size: 26px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 10;
+  cursor: pointer;
+}
 
-  /* Botão centralizado */
-  #overlay span {
-    padding: 18px 28px;
-    background: #222;
-    border: 2px solid #fff;
-    border-radius: 10px;
-  }
+#overlay span {
+  padding: 20px 34px;
+  background: #222;
+  border: 2px solid #fff;
+  border-radius: 12px;
+}
 
-  #overlay:hover span {
-    background: #333;
-  }
+#overlay:hover span {
+  background: #333;
+}
 </style>
 </head>
 
 <body>
-  <div id="overlay"><span>▶ TOCAR PARA JOGAR</span></div>
 
-  <div id="game"></div>
+<div id="overlay">
+  <span>▶ TOCAR PARA JOGAR</span>
+</div>
 
-  <script>
-    const overlay = document.getElementById("overlay");
-    overlay.addEventListener("click", () => {
-      overlay.remove();
-      document.documentElement.requestFullscreen?.();
-    });
-  </script>
+<div id="game"></div>
+
+<script>
+  /* ==============================
+     INÍCIO MANUAL (mobile friendly)
+     ============================== */
+
+  const overlay = document.getElementById("overlay");
+
+  overlay.addEventListener("click", async () => {
+
+    // 🔊 Libera áudio (obrigatório no iOS)
+    const AudioContext = window.AudioContext || window.webkitAudioContext;
+    const audioCtx = new AudioContext();
+    await audioCtx.resume();
+
+    overlay.remove();
+
+    // tenta fullscreen (se permitido)
+    document.documentElement.requestFullscreen?.();
+
+    // garante leitura correta do gamepad
+    setTimeout(() => {
+      EJS_emulator?.gamepad?.update?.();
+    }, 500);
+  });
+</script>
+
 </body>
 </html>
