--- a/index.html
+++ b/index.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-
-<title>Mortal Kombat II – Mega Drive</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+<title>Mortal Kombat II</title>
 
 <script>
   EJS_DEBUG_XX = true;
@@ -17,25 +14,17 @@
   EJS_pathtodata = "data/";
 
   EJS_startOnLoaded = true;
-  EJS_fullscreenOnLoaded = false;
 
-  /* 🎮 Core: Mega Drive 6 botões */
   EJS_coreOptions = {
     genesis_plus_gx_input_device_p1: "6button"
   };
 
-  /* 📱 CONTROLE TOUCH – FORÇA 6 BOTÕES + START */
   EJS_VirtualGamepadSettings = {
     enabled: true,
     layout: "genesis",
-    buttons: [
-      "A", "B", "C",
-      "X", "Y", "Z",
-      "START"
-    ]
+    buttons: ["A","B","C","X","Y","Z","START"]
   };
 </script>
-
 
 <script src="data/loader.js"></script>
 
@@ -45,7 +34,6 @@ html, body {
   background: black;
   height: 100%;
   overflow: hidden;
-  font-family: Arial, sans-serif;
 }
 
 #game {
@@ -53,66 +41,29 @@ html, body {
   height: 100vh;
 }
 
-/* Overlay inicial */
 #overlay {
   position: fixed;
   inset: 0;
-  background: rgba(0,0,0,0.9);
+  background: rgba(0,0,0,.85);
   color: white;
-  font-size: 26px;
   display: flex;
   align-items: center;
   justify-content: center;
+  font-size: 26px;
   z-index: 10;
-  cursor: pointer;
-}
-
-#overlay span {
-  padding: 20px 34px;
-  background: #222;
-  border: 2px solid #fff;
-  border-radius: 12px;
-}
-
-#overlay:hover span {
-  background: #333;
 }
 </style>
 </head>
 
 <body>
-
-<div id="overlay">
-  <span>▶ TOCAR PARA JOGAR</span>
-</div>
-
+<div id="overlay">▶ TOCAR PARA JOGAR</div>
 <div id="game"></div>
 
 <script>
-  /* ==============================
-     INÍCIO MANUAL (mobile friendly)
-     ============================== */
-
-  const overlay = document.getElementById("overlay");
-
-  overlay.addEventListener("click", async () => {
-
-    // 🔊 Libera áudio (obrigatório no iOS)
-    const AudioContext = window.AudioContext || window.webkitAudioContext;
-    const audioCtx = new AudioContext();
-    await audioCtx.resume();
-
-    overlay.remove();
-
-    // tenta fullscreen (se permitido)
-    document.documentElement.requestFullscreen?.();
-
-    // garante leitura correta do gamepad
-    setTimeout(() => {
-      EJS_emulator?.gamepad?.update?.();
-    }, 500);
-  });
+document.getElementById("overlay").onclick = () => {
+  document.getElementById("overlay").remove();
+  document.documentElement.requestFullscreen?.();
+};
 </script>
-
 </body>
 </html>
