--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 <title>Mortal Kombat II</title>
 
 <script>
-  EJS_DEBUG_XX = false;
   EJS_threads = false;
 
   EJS_player     = "#game";
@@ -13,16 +12,21 @@
   EJS_gameUrl    = "roms/mk2.bin";
   EJS_pathtodata = "data/";
 
-  /* 🔑 ESSENCIAL */
   EJS_startOnLoaded = true;
 
-  /* 🎮 CORE EM 6 BOTÕES */
+  /* 🎮 CONTROLE 6 BOTÕES */
   EJS_coreOptions = {
     genesis_plus_gx_input_device_p1: "6button"
   };
 
-  /* 📱 ESQUEMA DE CONTROLE CORRETO */
-  EJS_controlScheme = "genesis-6";
+  /* 📱 FORÇA CONTROLE TOUCH */
+  EJS_defaultOptions = {
+    touch: true
+  };
+
+  EJS_VirtualGamepadSettings = {
+    enabled: true
+  };
 </script>
 
 <script src="data/loader.js"></script>
@@ -39,34 +43,10 @@ html, body {
   width: 100vw;
   height: 100vh;
 }
-
-/* Overlay inicial */
-#overlay {
-  position: fixed;
-  inset: 0;
-  background: rgba(0,0,0,.85);
-  color: white;
-  font-size: 26px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  z-index: 10;
-  cursor: pointer;
-}
 </style>
 </head>
 
 <body>
-
-<div id="overlay">▶ TOCAR PARA JOGAR</div>
 <div id="game"></div>
-
-<script>
-document.getElementById("overlay").onclick = () => {
-  document.getElementById("overlay").remove();
-  document.documentElement.requestFullscreen?.();
-};
-</script>
-
 </body>
 </html>
