--- a/index.html
+++ b/index.html
@@ -8,24 +8,16 @@
   EJS_threads = false;
 
   EJS_player     = "#game";
-  EJS_core       = "genesis_plus_gx";
+  EJS_core       = "picodrive";      // 🔥 CORE SIMPLES E ESTÁVEL
   EJS_gameUrl    = "roms/mk2.bin";
   EJS_pathtodata = "data/";
 
+  /* Inicia automaticamente */
   EJS_startOnLoaded = true;
 
-  /* 🎮 CONTROLE 6 BOTÕES */
-  EJS_coreOptions = {
-    genesis_plus_gx_input_device_p1: "6button"
-  };
-
-  /* 📱 FORÇA CONTROLE TOUCH */
+  /* Força controle touch */
   EJS_defaultOptions = {
     touch: true
-  };
-
-  EJS_VirtualGamepadSettings = {
-    enabled: true
   };
 </script>
 
