--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<title>Genesis – AK</title>
+<title>MK2</title>
 
 <script>
   // CONFIGURAÇÃO MEGA DRIVE / GENESIS
