--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   EJS_core          = "genesis_plus_gx";   // Core correto Mega Drive
   EJS_gameUrl       = "roms/mk2.bin";      // ROM do repositório gen-sor
   EJS_pathtodata    = "data/";             // Caminho do EmulatorJS
+  EJS_coreOptions = {
+  genesis_plus_gx_input_device_p1: "6button"
+};
 
   // Inicialização automática
   EJS_startOnLoaded = true;
