--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   EJS_threads = false;
   EJS_player        = "#game";
   EJS_core          = "genesis_plus_gx_wide";   // Core correto Mega Drive
-  EJS_gameUrl       = "roms/sor.bin";      // ROM do repositório gen-sor
+  EJS_gameUrl       = "roms/mk2.bin";      // ROM do repositório gen-sor
   EJS_pathtodata    = "data/";             // Caminho do EmulatorJS
 
   // Inicialização automática
