--- a/index.html
+++ b/index.html
@@ -10,12 +10,19 @@
   EJS_threads = false;
   EJS_player        = "#game";
   EJS_core          = "genesis_plus_gx";   // Core correto Mega Drive
-  EJS_gameUrl       = "roms/mk2.bin";      // ROM do repositório gen-sor
+  EJS_gameUrl       = "roms/mk2.bin";      // ROM
   EJS_pathtodata    = "data/";             // Caminho do EmulatorJS
 
   // Inicialização automática
   EJS_startOnLoaded = true;
   EJS_fullscreenOnLoaded = false;
+
+  // Configuração do controle (Mega Drive: 3 botões + Start)
+  EJS_gamepadConfig = {
+    "genesis_plus_gx": {
+      "buttons": ["A","B","C","Start"]
+    }
+  };
 </script>
 
 <script src="data/loader.js"></script>
