--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   EJS_DEBUG_XX = true;
   EJS_threads = false;
   EJS_player        = "#game";
-  EJS_core          = "genesis_plus_gx";   // Core correto Mega Drive
+  EJS_core          = "segaMD";   // Core correto Mega Drive
   EJS_gameUrl       = "roms/mk2.bin";      // ROM do repositório gen-sor
   EJS_pathtodata    = "data/";             // Caminho do EmulatorJS
 
